--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         <h2 class="section-title">Nhận Diện Biển Báo Giao Thông</h2>
         <div class="video-container">
             <!-- Placeholder Image -->
-            <img id="placeholderImage" src="https://via.placeholder.com/600x400?text=Ứng+Dụng+Nhận+Diện+Biển+Báo+Giao+Thông" alt="Placeholder">
+            <img id="placeholderImage" src="https://duan-khkt2024.github.io/bienbaogiaothong/model/h1.jpg" alt="Ứng dụng Nhận Diện Biển Báo Giao Thông">
             <!-- Video Element -->
             <video id="video" autoplay playsinline aria-label="Video từ camera"></video>
             <div class="overlay"></div>
