--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
             word-wrap: break-word;
             font-weight: normal; /* Không in đậm */
             white-space: nowrap; /* Không tự động co giãn */
+            overflow: hidden; /* Ẩn phần tràn */
+            text-overflow: ellipsis; /* Thêm dấu chấm lửng nếu văn bản dài */
         }
 
         .slogan-section.active #slogan {
@@ -284,7 +286,8 @@
         @media (max-width: 600px) {
             .slogan-section {
                 width: 100%; /* Trên thiết bị nhỏ, chiều rộng 100% */
-                height: auto; /* Tự động điều chỉnh chiều cao */
+                /* Đặt chiều cao cố định thay vì auto */
+                height: var(--fixed-slogan-height);
                 padding: 10px;
             }
 
@@ -298,8 +301,10 @@
             }
 
             #slogan {
-                font-size: 1.2em; /* Giảm kích thước font trên thiết bị nhỏ */
-                white-space: normal; /* Cho phép xuống dòng */
+                font-size: 1em; /* Giảm kích thước font trên thiết bị nhỏ */
+                white-space: nowrap; /* Không cho xuống dòng */
+                overflow: hidden; /* Ẩn phần tràn */
+                text-overflow: ellipsis; /* Thêm dấu chấm lửng nếu văn bản dài */
             }
 
             .section-title {
@@ -317,6 +322,11 @@
             .qa-section h2 {
                 font-size: 1.1em; /* Giảm kích thước font chữ cho tiêu đề */
             }
+
+            /* Optional: Adjust slogan font size further if needed */
+            /* #slogan {
+                font-size: 0.9em;
+            } */
         }
 
         #predictionResult {
@@ -655,8 +665,8 @@
 <body>
 
     <!-- Phần 1: Khẩu Hiệu Tham Gia Giao Thông -->
-    <div class="slogan-section">
-        <p id="slogan"></p>
+    <div class="slogan-section active">
+        <p id="slogan">Đi bộ trên vỉa hè - An toàn cho bạn và mọi người!</p>
     </div>
 
     <!-- Phần 2: Nhận Diện Biển Báo Giao Thông -->
@@ -1023,7 +1033,6 @@
             downloadButton.style.display = 'none';
             readButton.style.display = 'none';
             retakeButton.style.display = 'none';
-            quizButton.style.display = 'none';
             captureButton.style.display = 'inline-block';
             captureButton.textContent = "Bắt Đầu"; // Reset nhãn nút sau khi chụp lại
 
